--- a/configs/aos_defconfig
+++ b/configs/aos_defconfig
@@ -52,7 +52,7 @@ CONFIG_IRQ_REPORTING=y
 # CONFIG_OPTIMISATION_O1 is not set
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
-# CONFIG_DANGEROUS_CODE_INJECTION is not set
+CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_DEBUG_DISABLE_L2_CACHE is not set
 # CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
 
