Hack in C++ support
Also via a unusual method to update the musl version without creating a huge
diff that give won't accept.
musl needed to be updated because libc++ depends on a newer one than the one
provided.

To compile and link successfully with C++:
 1. Use the CXXFILES makefile variable for C++ source files
 2. Add "libc++" to the list of prerequisites in your app/lib Kbuild
 3. If linking, add "c++ c++abi" to the LIBS makefile variable before "c"
 4. If using exceptions, substitute occurences of "gcc_eh" with "unwind" in
        LDFLAGS. The program will also need to have valid program header
        related auxillary vectors passed in on startup (already done for SOS)

Remember to use extern "C"

Things that don't work:
 1. Naturally, anything that ends up calling an unimplemented syscall
        (You will usually get an assertion failure for this)
 2. Using too much heap memory (Until sys_mmap2() is fully implemented)
 3. Real threads (You will need to implement __set_thread_area() properly)
 4. Probably a lot more things (Do let me know)

--- a/Kconfig
+++ b/Kconfig
@@ -19,7 +19,8 @@ menu "seL4 Kernel"
 endmenu
 
 menu "seL4 Libraries"
-    source "libs/libmuslc/Kconfig"
+    source "libs/libmuslc-updated/Kconfig"
+    source "libs/libc++/Kconfig"
     source "libs/libsel4/Kconfig"
     source "libs/libsel4cspace/Kconfig"
     source "libs/liblwip/Kconfig"
