--- a/configs/aos_defconfig
+++ b/configs/aos_defconfig
@@ -68,8 +68,9 @@ CONFIG_OPTIMISATION_O2=y
 # seL4 Libraries
 #
 CONFIG_LIB_MUSL_C=y
-CONFIG_LIB_MUSL_C_USE_PREBUILT=y
 CONFIG_HAVE_LIBC=y
+CONFIG_HAVE_CRT=y
+CONFIG_LIB_CXX=y
 CONFIG_LIB_SEL4=y
 # CONFIG_LIB_SEL4_STUBS_USE_IPC_BUFFER_ONLY is not set
 CONFIG_LIB_SEL4_CSPACE=y
