--- a/apps/sos/Makefile
+++ b/apps/sos/Makefile
@@ -15,6 +15,7 @@ TARGETS := sos.bin
 CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 CFILES   += $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/ut_manager/*.c))
 CFILES   += $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/sys/*.c))
+CXXFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/timer/*.cpp))
 ASMFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/crt0.S))
 CFILES   += $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/*.c))
 OFILES   := archive.o
@@ -22,12 +23,13 @@ OFILES   := archive.o
 INCLUDE_DIRS  += $(SOURCE_DIR)/include
 
 # Libraries required to build the target
-LIBS := sel4 elf c cpio lwip ethdrivers \
+LIBS := sel4 elf c c++ c++abi cpio lwip ethdrivers \
 	 serial nfs clock sel4cspace platsupport
 
 include $(SEL4_COMMON)/common.mk
 
 CRTOBJFILES :=
+LDFLAGS := $(subst gcc_eh,unwind,$(LDFLAGS))
 
 ${COMPONENTS}:
 	false
