--- a/libs/libclock/Makefile
+++ b/libs/libclock/Makefile
@@ -12,9 +12,8 @@
 TARGETS := libclock.a
 
 # Source files required to build the target
-CFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
+CXXFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.cpp))
 
 HDRFILES := $(wildcard $(SOURCE_DIR)/include/*)
 
-CFLAGS := -g -O0
 include $(SEL4_COMMON)/common.mk
