Added an open file table and a file descriptor table. Haven't tested them properly yet

--- a/apps/sosh/Makefile
+++ b/apps/sosh/Makefile
@@ -16,5 +16,5 @@ CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 
 # Libraries required to build the target
 LIBS := c sel4 sos
-
+export DEBUG=1
 include $(SEL4_COMMON)/common.mk
