--- a/configs/aos_defconfig
+++ b/configs/aos_defconfig
@@ -97,9 +97,9 @@ CONFIG_SOS_NETMASK="225.225.225.0"
 CONFIG_SOS_IP="192.168.168.2"
 CONFIG_SOS_GATEWAY="192.168.168.1"
 CONFIG_SOS_NFS_DIR="/var/tftpboot/USER"
-CONFIG_SOS_STARTUP_APP="tty_test"
-# CONFIG_APP_SOSH is not set
+CONFIG_SOS_STARTUP_APP="sosh"
 CONFIG_APP_TTY_TEST=y
+CONFIG_APP_SOSH=y
 
 #
 # Tools
@@ -110,7 +110,7 @@ CONFIG_ARM_ERRATA_764369=y
 #
 # Toolchain Options
 #
-CONFIG_CROSS_COMPILER_PREFIX="arm-none-linux-gnueabi-"
+CONFIG_CROSS_COMPILER_PREFIX="arm-linux-gnueabi-"
 CONFIG_KERNEL_COMPILER=""
 CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
