--- a/configs/aos_defconfig
+++ b/configs/aos_defconfig
@@ -71,6 +71,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_CXX=y
+CONFIG_LIB_BOOST=y
 CONFIG_LIB_SEL4=y
 # CONFIG_LIB_SEL4_STUBS_USE_IPC_BUFFER_ONLY is not set
 CONFIG_LIB_SEL4_CSPACE=y
