--- a/Kconfig
+++ b/Kconfig
@@ -21,6 +21,7 @@ endmenu
 menu "seL4 Libraries"
     source "libs/libmuslc-updated/Kconfig"
     source "libs/libc++/Kconfig"
+    source "libs/libboost/Kconfig"
     source "libs/libsel4/Kconfig"
     source "libs/libsel4cspace/Kconfig"
     source "libs/liblwip/Kconfig"
