--- a/apps/sos/Kbuild
+++ b/apps/sos/Kbuild
@@ -19,4 +19,5 @@ sos: ${sos-components-y} \
      libsel4 libelf $(libc) libc++ libcpio \
      libsel4cspace libserial libclock \
      liblwip libnfs libethdrivers \
-     libsos libplatsupport
+     libsos libplatsupport \
+     libboost
