--- a/libs/libsos/Makefile
+++ b/libs/libsos/Makefile
@@ -16,6 +16,7 @@ CFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 
 # Header files/directories this library provides
 HDRFILES := $(wildcard $(SOURCE_DIR)/include/*)
-CFLAGS := -g -Wall
 
 include $(SEL4_COMMON)/common.mk
+
+CPPFLAGS += -Werror
