--- a/libs/libnfs/Makefile
+++ b/libs/libnfs/Makefile
@@ -13,6 +13,7 @@ TARGETS := libnfs.a
 
 # Source files required to build the target
 CFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
+CXXFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.cpp))
 
 # Header files/directories this library provides
 RHDRFILES := '$(wildcard $(SOURCE_DIR)/include/*) nfs'
