--- a/configs/aos_defconfig
+++ b/configs/aos_defconfig
@@ -97,7 +97,7 @@ CONFIG_APP_SOS=y
 CONFIG_SOS_NETMASK="225.225.225.0"
 CONFIG_SOS_IP="192.168.168.2"
 CONFIG_SOS_GATEWAY="192.168.168.1"
-CONFIG_SOS_NFS_DIR="/var/tftpboot/USER"
+CONFIG_SOS_NFS_DIR="/var/tftpboot/matt"
 CONFIG_SOS_STARTUP_APP="sosh"
 CONFIG_APP_SOSH=y
 CONFIG_APP_TTY_TEST=y
