--- a/apps/sosh/Makefile
+++ b/apps/sosh/Makefile
@@ -13,6 +13,7 @@ TARGETS := $(notdir $(SOURCE_DIR)).bin
 
 # Source files required to build the target
 CFILES   := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
+CFILES   += $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/crt/arch-${ARCH}/*.c))
 
 # Libraries required to build the target
 LIBS := c sel4 sos
