Alias boost::exception_ptr to std::exception_ptr
Avoids some lovely headaches from handling exceptions from futures

--- a/libs/libboost/Makefile
+++ b/libs/libboost/Makefile
@@ -6,9 +6,10 @@ CXXFLAGS += -DBOOST_THREAD_VERSION=4 -DBOOST_SYSTEM_NO_DEPRECATED
 
 .PHONY: libboost
 
-$(SOURCE_DIR)/boost/bootstrap.sh:
+$(SOURCE_DIR)/boost/bootstrap.sh: | $(SOURCE_DIR)/sos.patch
 	mkdir -p "$(SOURCE_DIR)/boost"
 	curl -L "https://downloads.sourceforge.net/project/boost/boost/1.61.0/boost_1_61_0.tar.bz2" | tar xjf - -C "$(SOURCE_DIR)/boost" --strip-components=1
+	(cd "$(SOURCE_DIR)/boost" && patch -mp1 < ../sos.patch)
 
 $(BUILD_DIR)/project-config.jam: | $(SOURCE_DIR)/boost/bootstrap.sh
 	mkdir -p "$(BUILD_DIR)"
