Disabling and enabling reference bits works

--- a/apps/sos/Makefile
+++ b/apps/sos/Makefile
@@ -34,7 +34,7 @@ LIBS := sel4 elf c c++ c++abi cpio lwip ethdrivers \
 
 include $(SEL4_COMMON)/common.mk
 
-CPPFLAGS += -Werror -Wno-missing-field-initializers
+CPPFLAGS += -Werror -Wno-missing-field-initializers -Og
 CXXFLAGS += -DBOOST_THREAD_VERSION=4 -DBOOST_SYSTEM_NO_DEPRECATED -DBOOST_THREAD_PROVIDES_EXECUTORS
 
 CRTOBJFILES :=
