--- a/libs/libelf/Makefile
+++ b/libs/libelf/Makefile
@@ -18,3 +18,6 @@ CFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 HDRFILES := $(wildcard $(SOURCE_DIR)/include/*)
 
 include $(SEL4_COMMON)/common.mk
+
+CFLAGS += -flto
+AR := $(CC)-ar
