--- a/libs/libserial/Makefile
+++ b/libs/libserial/Makefile
@@ -16,5 +16,7 @@ CFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard $(SOURCE_DIR)/src/*.c))
 
 RHDRFILES := '$(wildcard $(SOURCE_DIR)/include/*) serial'
 
-CFLAGS := -g -O0
 include $(SEL4_COMMON)/common.mk
+
+CFLAGS += -flto
+AR := $(CC)-ar
