--- a/libs/libnfs/Makefile
+++ b/libs/libnfs/Makefile
@@ -22,6 +22,10 @@ include $(SEL4_COMMON)/common.mk
 
 CXXFLAGS += -DBOOST_THREAD_VERSION=4 -DBOOST_SYSTEM_NO_DEPRECATED -DBOOST_THREAD_PROVIDES_EXECUTORS
 
+CFLAGS += -flto
+CXXFLAGS += -flto
+AR := $(CC)-ar
+
 .PHONY: docs
 docs: docs/libnfs.pdf
 
