--- a/Kconfig
+++ b/Kconfig
@@ -40,6 +40,7 @@ endmenu
 menu "seL4 Applications"
     source "apps/sos/Kconfig"
     source "apps/sosh/Kconfig"
+    source "apps/thrasher/Kconfig"
     source "apps/tty_test/Kconfig"
 endmenu
 
