--- a/apps/sos/Makefile
+++ b/apps/sos/Makefile
@@ -36,6 +36,7 @@ include $(SEL4_COMMON)/common.mk
 
 CPPFLAGS += -Werror -Wno-missing-field-initializers
 CXXFLAGS += -DBOOST_THREAD_VERSION=4 -DBOOST_SYSTEM_NO_DEPRECATED -DBOOST_THREAD_PROVIDES_EXECUTORS
+LDFLAGS += -Wl,--section-start=.sos_brk_area=0x900000
 
 CRTOBJFILES :=
 
