--- a/apps/sos/Kbuild
+++ b/apps/sos/Kbuild
@@ -10,6 +10,7 @@
 
 apps-$(CONFIG_APP_SOS) += sos
 
+sos-components-$(CONFIG_APP_SHARE_VM_TEST) += share_vm_test
 sos-components-$(CONFIG_APP_SOSH) += sosh
 sos-components-$(CONFIG_APP_THRASHER) += thrasher
 sos-components-$(CONFIG_APP_TTY_TEST) += tty_test
